refactor: swaggo fmt
